// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AlpineBasic Docker container creation creates a Docker container for { version: 'latest', expectedImage: 'alpine:latest' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "provider": {
    "docker": [
      {},
    ],
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "alpine:latest",
      },
    },
  },
  "terraform": {
    "required_providers": {
      "docker": {
        "source": "kreuzwerker/docker",
        "version": "3.0.2",
      },
    },
  },
}
`;

exports[`AlpineBasic Docker container creation creates an AlpineBasic Docker container with volume 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
        "volumes": [
          {
            "container_path": "/mnt/data",
            "volume_name": "\${docker_volume.Test_Test-volume_F1ABD0A9.name}",
          },
        ],
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "alpine:latest",
      },
    },
    "docker_volume": {
      "Test_Test-volume_F1ABD0A9": {
        "name": "Test-data",
      },
    },
  },
}
`;
